# 68020_pipeline_in_c

./: .gitignore  CMakeLists.txt  IMPROVEMENT_PLAN.md  Makefile  ab_sequence  ab_test  test_systematic  test_vector_runner
ab_sequence.dSYM/Contents/: Info.plist
ab_sequence.dSYM/Contents/Resources/DWARF/: ab_sequence
ab_sequence.dSYM/Contents/Resources/Relocations/aarch64/: ab_sequence.yml
ab_test.dSYM/Contents/: Info.plist
ab_test.dSYM/Contents/Resources/DWARF/: ab_test
ab_test.dSYM/Contents/Resources/Relocations/aarch64/: ab_test.yml
frontend/: maclc_main.c
include/: m68020.h  m68020_ea.h  m68020_exceptions.h  m68020_internal.h  m68020_opcodes.h  m68020_types.h
src/bus/: m68020_bus.c  m68020_bus_error.c  m68020_memmap.c
src/cpu/: m68020_cache.c  m68020_core.c  m68020_cycle_timing.c  m68020_ea.c  m68020_exceptions.c  m68020_pipeline.c  m68020_pipeline_stages.c  m68020_privileged.c  m68020_state.c
src/debug/: m68020_disasm.c  m68020_trace.c
src/instructions/: m68020_alu.c  m68020_bitfield.c  m68020_branch.c  m68020_callm_rtm.c  m68020_cas.c  m68020_compare.c  m68020_coproc.c  m68020_jump.c  m68020_load_store.c  m68020_misc.c  m68020_move.c  m68020_mul_div.c  m68020_shift.c
sys/: mac_lc.c  mac_lc.h
test_systematic.dSYM/Contents/: Info.plist
test_systematic.dSYM/Contents/Resources/DWARF/: test_systematic
test_systematic.dSYM/Contents/Resources/Relocations/aarch64/: test_systematic.yml
test_vector_runner.dSYM/Contents/: Info.plist
test_vector_runner.dSYM/Contents/Resources/DWARF/: test_vector_runner
test_vector_runner.dSYM/Contents/Resources/Relocations/aarch64/: test_vector_runner.yml
tests/ab_compare/: ab_sequence.c  ab_test.c
tests/integration/: test_runner.c
tests/validation/: test_systematic.c
tests/vectors/: run_vectors.py  test_vector_runner.c
